# historical-bce-cpp-1.x-with-shell

./: CMakeLists.txt  LICENSE  README  VERSION  version.h
docs/changes/: stage.txt
include/: balancer.hpp
include/common/: exception.hpp
include/math/: equation.hpp  fraction.hpp  integer.hpp  matrix.hpp  polynomial.hpp  polynomial_unknown.hpp
include/parser/: bracket.hpp  common.hpp  element.hpp  molecule.hpp  syntax.hpp
shell/: CMakeLists.txt
shell/cui/: CMakeLists.txt  shell.cpp  shell.hpp
shell/cui/resources/: version.rc
shell/gui/: bce-gui.pro  bce.cpp  bce.hpp  bce.ui  main.cpp  setup.hpp  variable.hpp
shell/gui/nls/en-US/: bce++.ts
shell/gui/nls/en_US/: bce++.qm
shell/gui/nls/ja_JP/: bce++.qm  bce++.ts
shell/gui/nls/ko-KR/: bce++.qm  bce++.ts
shell/gui/nls/posix/: bce++.qm  bce++.ts
shell/gui/nls/zh-CN/: bce++.qm
shell/gui/nls/zh-TW/: bce++.ts
shell/gui/nls/zh_CN/: bce++.ts
shell/gui/nls/zh_TW/: bce++.qm
shell/gui/resources/: version.rc
sources/: CMakeLists.txt  balancer.cpp
sources/common/: exception.cpp
sources/math/: equation.cpp  fraction.cpp  integer.cpp  matrix.cpp  polynomial.cpp  polynomial_unknown.cpp
sources/parser/: common.cpp  element.cpp  molecule.cpp  syntax.cpp
tests/: CMakeLists.txt  tests_runner.cpp  tests_runner.hpp
tests/balancer/: balancer1.out  balancer117.out  balancer118.out  balancer121.out  balancer132.out  balancer160.out  balancer164.out  balancer190.out  balancer211.out  balancer30.out  balancer361.out  balancer368.out  balancer404.out  balancer409.out  balancer417.out  balancer59.out  balancer63.out  balancer64.out  balancer_tests.cpp  balancer_tests.hpp
tests/math/equation/: equation_tests.cpp  equation_tests.hpp
tests/math/fraction/: fraction_tests.cpp  fraction_tests.hpp
tests/math/integer/: format.txt  integer_tests.cpp  integer_tests.hpp
tests/math/integer/basic/: integer1.out  integer2.out  integer3.out  integer4.out  integer5.in  integer5.out
tests/math/integer/extra/: integer1.in  integer1.out  integer10.in  integer10.out  integer100.in  integer100.out  integer11.in  integer11.out  integer12.in  integer12.out  integer13.in  integer13.out  integer14.in  integer14.out  integer15.in  integer15.out  integer16.in  integer16.out  integer17.in  integer17.out  integer18.in  integer18.out  integer19.in  integer19.out  integer2.in  integer2.out  integer20.in  integer20.out  integer21.in  integer21.out  integer22.in  integer22.out  integer23.in  integer23.out  integer24.in  integer24.out  integer25.in  integer25.out  integer26.in  integer26.out  (+160 more)
tests/math/integer/gcd/: integer1.in  integer1.out  integer10.in  integer10.out  integer2.in  integer2.out  integer3.in  integer3.out  integer4.in  integer4.out  integer5.in  integer5.out  integer6.in  integer6.out  integer7.in  integer7.out  integer8.in  integer8.out  integer9.in  integer9.out
tests/math/integer/lcm/: integer1.in  integer1.out  integer10.in  integer10.out  integer2.in  integer2.out  integer3.in  integer3.out  integer4.in  integer4.out  integer5.in  integer5.out  integer6.in  integer6.out  integer7.in  integer7.out  integer8.in  integer8.out  integer9.in  integer9.out
tests/parser/molecule/: molecule_tests.cpp  molecule_tests.hpp
tests/parser/preparser/: preparser1.out  preparser30.out  preparser_tests.cpp  preparser_tests.hpp
tests/resources/: version.rc
